--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 </head>
 <body>
     <header>Header content</header>
+    <section>Main Image</section>
+    <section>Club Ethos</section>
+    <section>Running locations, distances and times</section>
+    <footer>social links here</footer>
 </body>
 </html>
