--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             </ul>
         </nav>
     </header>
-    <section>Main Image</section>
+    <section id="hero-outer">
+        <div id="hero-image">
+
+  </div>
+    </section>
     <section>Club Ethos</section>
     <section>Running locations, distances and times</section>
     <footer>social links here</footer>
