--- a/index.html
+++ b/index.html
@@ -125,7 +125,26 @@
             <h3>11:30</h3>
         </div>
     </section>
-    <footer>social links here</footer>
+    <footer>
+    <ul>
+        <li>
+            <a href="https://facebook.com/" target="_blank" rel="noopener"
+             aria-label="Visit our Facebook page (opens in a new tab)"><i class= "fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/" target="_blank" rel="noopener"
+             aria-label="Visit our Twitter page (opens in a new tab)"><i class= "fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com/" target="_blank" rel="noopener"
+             aria-label="Visit our Youtube page (opens in a new tab)"><i class= "fab fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com/" target="_blank" rel="noopener"
+             aria-label="Visit our Instagram page (opens in a new tab)"><i class= "fab fa-instagram"></i></a>
+        </li>
+    </ul>
+    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/68f0de29ed.js" crossorigin="anonymous"></script>
